styling the master vendor page
We never show the engagement term (e.g. "1 week") next to the rates in
the revised design so we've removed the with_terms argument from have_rates

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -11,7 +11,6 @@
 @import "govuk-frontend/components/tabs/tabs";
 @import "govuk-frontend/components/radios/radios";
 @import "govuk-frontend/components/select/select";
-@import "govuk-frontend/components/table/table";
 @import "govuk-frontend/components/textarea/textarea";
 @import "govuk-frontend/components/warning-text/warning-text";
 
@@ -32,5 +31,6 @@
 @import "phase-banner/phase-banner";
 @import "sidebar/sidebar";
 @import "supplier-record/supplier-record";
+@import "table/table";
 @import "tag/tag";
 @import "typography/typography";
