--- a/app/views/management_consultancy/suppliers/_supplier.html.erb
+++ b/app/views/management_consultancy/suppliers/_supplier.html.erb
@@ -7,13 +7,19 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-half">
       <h3 class="govuk-heading-s fm-supplier-record__contact-name">
-        <%= supplier.contact_name %>
+        <%= supplier.contact_name.present? ?
+              supplier.contact_name :
+              t('.contact_name_missing') %>
       </h3>
       <p class="govuk-body">
-        <%= supplier.contact_email %>
+        <%= supplier.contact_email.present? ?
+              mail_to(supplier.contact_email) :
+              t('.contact_email_missing') %>
       </p>
       <p class="govuk-body">
-        <%= format_telephone_number(supplier.telephone_number) %>
+        <%= supplier.telephone_number.present? ?
+              format_telephone_number(supplier.telephone_number) :
+              t('.telephone_number_missing') %>
       </p>
     </div>
     <div class="govuk-grid-column-one-half">
