Styling the MC supplier list

--- a/app/assets/stylesheets/components/mc-supplier-record/_mc-supplier-record.scss
+++ b/app/assets/stylesheets/components/mc-supplier-record/_mc-supplier-record.scss
@@ -10,3 +10,12 @@
 .mc-supplier-record__services-title {
   font-weight: $govuk-font-weight-semi-bold;
 }
+
+.mc-supplier-record__contact-name {
+  margin-bottom: 5px;
+  font-weight: $govuk-font-weight-semi-bold;
+}
+
+.mc-supplier-record__contact-item {
+	margin-bottom: 5px;
+}
