--- a/app/views/management_consultancy/suppliers/_supplier.html.erb
+++ b/app/views/management_consultancy/suppliers/_supplier.html.erb
@@ -5,14 +5,14 @@
     </div>
   </div>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-half">
-      <h3 class="govuk-heading-s fm-supplier-record__contact-name">
+    <div class="govuk-grid-column-one-half mc-supplier-record__contact-details">
+      <h3 class="govuk-heading-s mc-supplier-record__contact-name mc-supplier-record__contact-item">
         <%= supplier.contact_name %>
       </h3>
-      <p class="govuk-body">
+      <p class="govuk-body mc-supplier-record__contact-item">
         <%= supplier.contact_email %>
       </p>
-      <p class="govuk-body">
+      <p class="govuk-body mc-supplier-record__contact-item">
         <%= format_telephone_number(supplier.telephone_number) %>
       </p>
     </div>
@@ -20,7 +20,7 @@
       <h4 class="govuk-heading-s mc-supplier-record__services-title">
         Services
       </h4>
-      <ul>
+      <ul class="govuk-list govuk-list--bullet">
         <% supplier.services_in_lot(lot_number).each do |service| %>
           <li><%= service.name %></li>
         <% end %>
