--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -35,6 +35,7 @@ $govuk-colours: (
   "grey-2": #bfc1c3,
   "grey-3": #dee0e2,
   "grey-4": #f8f8f8,
+  "grey-5": #eeeeee,
   "white": #ffffff,
 
   "link": #007194,
