--- a/app/views/home/gateway.html.erb
+++ b/app/views/home/gateway.html.erb
@@ -4,7 +4,7 @@
 
       <h1 class="govuk-heading-xl">CCS Marketplace private beta</h1>
 
-      <p>This service is currently restricted. Please contact <a href="mailto:cmp-support@crowncommercial.gov.uk">CMP Support</a> at CCS if you have not received credentials.</p>
+		<p><%= t('.cmp_support_email_html', link: mail_to(Marketplace.feedback_email_address, 'CMP Support', class: 'govuk-link', 'aria-label': t('.cmp_support_aria_label'))) %></p>
 
       <%= link_to 'Log in with beta credentials', login_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
