--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       <div class="govuk-header__container govuk-width-container">
 
         <div class="govuk-header__logo">
-          <a href="/" class="govuk-header__link govuk-header__link--homepage">
+          <a href="/" class="govuk-header__link govuk-header__link--homepage" aria-label="Crown Marketplace homepage">
             <span class="govuk-header__logotype">
               <%= render partial: '/layouts/logotype' %>
             </span>
@@ -91,7 +91,7 @@
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
               <p class="govuk-!-margin-bottom-0 govuk-body-s">
-                <span class="govuk-!-font-weight-bold"><%= t('.having_problems') %></span> <%= t('.support_email_html', link: mail_to(Marketplace.feedback_email_address, nil, class: 'govuk-link')) %>
+                <span class="govuk-!-font-weight-bold"><%= t('.having_problems') %></span> <%= t('.support_email_html', link: mail_to(Marketplace.feedback_email_address, nil, class: 'govuk-link', 'aria-label': t('.support_aria_label'))) %>
               </p>
             </div>
           </div>
