--- a/app/assets/stylesheets/components/supplier-record/_supplier-record.scss
+++ b/app/assets/stylesheets/components/supplier-record/_supplier-record.scss
@@ -49,7 +49,7 @@
     content: "";
 }
 
-.supplier-record__file-download[href*='.xlsx']:before {
+.supplier-record__file-download[href*='format=xlsx']:before {
     background-color: #007831;
     content: ".XLSX";
 }
