--- a/app/views/temp_to_perm_calculator/home/fee.html.erb
+++ b/app/views/temp_to_perm_calculator/home/fee.html.erb
@@ -6,7 +6,7 @@
       </h1>
       <div class="govuk-panel__body">
         <%= t('.panel_body') %>
-        <br><strong><%= number_to_currency(@calculator.fee, unit: '£') %></strong>
+        <br><strong><%= number_to_currency(@calculator.early_hire_fee, unit: '£') %></strong>
       </div>
     </div>
 
