--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -28,6 +28,7 @@
 @import "label/label";
 @import "master-vendor-record/master-vendor-record";
 @import "mc-supplier-record/mc-supplier-record";
+@import "neutral-vendor-record/neutral-vendor-record";
 @import "phase-banner/phase-banner";
 @import "sidebar/sidebar";
 @import "supplier-record/supplier-record";
