Buyers selection section redesigned

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -6,7 +6,6 @@
 @import "govuk-frontend/components/file-upload/file-upload";
 @import "govuk-frontend/components/hint/hint";
 @import "govuk-frontend/components/input/input";
-@import "govuk-frontend/components/inset-text/inset-text";
 @import "govuk-frontend/components/panel/panel";
 @import "govuk-frontend/components/tabs/tabs";
 @import "govuk-frontend/components/radios/radios";
@@ -25,6 +24,7 @@
 @import "footer/footer";
 @import "fieldset/fieldset";
 @import "fm-supplier-record/fm-supplier-record";
+@import "inset-text/inset-text";
 @import "label/label";
 @import "master-vendor-record/master-vendor-record";
 @import "mc-supplier-record/mc-supplier-record";
