--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -2,17 +2,15 @@
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.header') %></h1>
 
-    <table class="govuk-table inputs">
-      <caption class="govuk-table__caption"><%= t('.inputs_header') %></caption>
-      <tbody class="govuk-table__body">
+    <div class="govuk-inset-text">
+      <h2 class="govuk-heading-s"><%= t('.inputs_header') %></h2>
+      <ul class="govuk-list govuk-list--bullet">
         <% @journey.inputs.each do |question_key, answer| %>
-          <tr class="govuk-table__row">
-            <th class="govuk-table__header" scope="row"><%= t(".inputs.#{question_key}") %></th>
-            <td class="govuk-table__cell"><%= answer %></td>
-          </tr>
+        <li class="cmp-inset-text__list-item"><%= t(".inputs.#{question_key}") %>: <%= answer %></li>
         <% end %>
-      </tbody>
-    </table>
+      </ul>
+    </div>
+
     <p class="govuk-body">
       <% if @location %>
       <span class="govuk-body-l"><%= @branches.count %></span> <%= t('.results_found_with_location_html', range: default_search_range, postcode: @location.postcode) %>
