Help the school understand how to avoid paying agency fees
Avoid the Early Hire fee by hiring on or after the 61st working day from
the start of the contract.

Avoid the Lack of Notice fee by giving notice at least 20 working days
before the hire date.

Note that this assumes there aren't any school holidays between the
contract start date and the hire date. We plan to add that functionality
in subsequent commits.

Co-authored-by: Chris Lowis <chris.lowis@gofreerange.com>

--- a/app/views/temp_to_perm_calculator/home/fee.html.erb
+++ b/app/views/temp_to_perm_calculator/home/fee.html.erb
@@ -18,6 +18,8 @@
       <% if @calculator.fee_for_lack_of_notice? %>
         <p>You're going to be hiring a worker after the 41st working day of a contract. This means that you might be charged a fee for lack of notice, although the total fee (including any Early Hire Fee) cannot exceed <%= number_to_currency(@calculator.daily_supplier_fee * 20, unit: '£') %>.</p>
       <% end %>
+      <h2>Avoid paying fees</h2>
+      <p>If you hire the worker on <%= @calculator.ideal_hire_date.to_formatted_s(:long) %> and give notice on <%= @calculator.ideal_notice_date.to_formatted_s(:long) %> then you can avoid paying any fees to the agency.</p>
     </div>
   </div>
 </div>
