Improve typography in non-i18n content

--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -8,7 +8,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>find and hire a worker, using an agency</li>
-        <li>hire a specific person (a 'nominated worker')</li>
+        <li>hire a specific person (a ‘nominated worker’)</li>
         <li>find a managed service provider, who can take on all your temporary staff needs</li>
         <li>create a shortlist of suppliers based on your needs and download or save it</li>
       </ul>
