Include path to error_summary partial
This will make it easier to namespace view templates, because this
partial is generic and used by templates in all namespaces and will
remain in the app/views/journey directory.

--- a/app/views/journey/contract_start.html.erb
+++ b/app/views/journey/contract_start.html.erb
@@ -2,7 +2,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
+    <%= render partial: 'journey/error_summary', locals: { errors: @journey.errors } %>
     <%= form_tag @form_path, method: :get do %>
       <%= govuk_form_group_with_optional_error(@journey, :contract_start) do %>
         <%= govuk_fieldset_with_optional_error(@journey, :contract_start) do %>
