--- a/app/views/journey/value_band.html.erb
+++ b/app/views/journey/value_band.html.erb
@@ -1,6 +1,6 @@
 <%= add_optional_error_prefix_to_page_title(@journey.errors) %>
 
-<%= render partial: 'error_summary', locals: { errors: @journey.errors } %>
+<%= render partial: 'journey/error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
   <%= govuk_form_group_with_optional_error(@journey, :value_band) do %>
     <%= govuk_fieldset_with_optional_error(@journey, :value_band) do %>
