--- a/app/views/supply_teachers/suppliers/neutral_vendors.html.erb
+++ b/app/views/supply_teachers/suppliers/neutral_vendors.html.erb
@@ -28,7 +28,7 @@
                   <% if rate.percentage_mark_up? %>
                     <%= number_to_percentage(rate.mark_up * 100, precision: 1) %>
                   <% else %>
-                    <%= number_to_currency(rate.daily_fee, unit: '£') %>
+                    <%= number_to_currency(rate.daily_fee) %>
                   <% end %>
                 </td>
                 <% end %>          
@@ -51,7 +51,7 @@
           <% if rate.percentage_mark_up? %>
             <%= number_to_percentage(rate.mark_up * 100, precision: 1) %>
           <% else %>
-            <%= number_to_currency(rate.daily_fee, unit: '£') %>
+            <%= number_to_currency(rate.daily_fee) %>
           <% end %>
         </p>
       <% end %>
