Display date that notice is required
The notice date is 20 working days before the hire date. It's only
displayed if the hire date is more than 40 working days after the
contract start date which mirrors the behaviour of the Excel spreadsheet
tool.

--- a/app/views/supply_teachers/home/fee.html.erb
+++ b/app/views/supply_teachers/home/fee.html.erb
@@ -8,6 +8,10 @@
         <div class="govuk-panel__body">
           <%= t('.panel_body') %>
           <br><strong><%= number_to_currency(@calculator.early_hire_fee) %></strong>
+          <% if @calculator.notice_period_required? %>
+            <br>
+            Provided you give notice on or before <%= @calculator.notice_date_based_on_hire_date.to_formatted_s(:long) %>
+          <% end %>
         </div>
       </div>
     </div>
