Separate email addresses for support and feedback

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
               <p class="govuk-!-margin-bottom-0 govuk-body-s">
-                <span class="govuk-!-font-weight-bold"><%= t('.having_problems') %></span> <%= t('.support_email_html', link: govuk_email_link(Marketplace.feedback_email_address, t('.support_aria_label'))) %>
+                <span class="govuk-!-font-weight-bold"><%= t('.having_problems') %></span> <%= t('.support_email_html', link: govuk_email_link(Marketplace.support_email_address, t('.support_aria_label'))) %>
               </p>
             </div>
           </div>
