Add a radius to any Geolocatable step
This preserves the default of 25 but allows it to be overridden by a
query parameter.

This has the side effect of moving the default out of the Supply Teacher
world. We might want to revisit this later.

--- a/app/views/supply_teachers/branches/index.html.erb
+++ b/app/views/supply_teachers/branches/index.html.erb
@@ -13,7 +13,7 @@
 
     <p class="govuk-body">
       <% if @location %>
-      <span class="govuk-body-l"><%= @branches.count %></span> <%= t('.results_found_with_location_html', range: number_to_human(default_search_range, units: :miles), postcode: @location.postcode) %>
+      <span class="govuk-body-l"><%= @branches.count %></span> <%= t('.results_found_with_location_html', range: number_to_human(@radius_in_miles, units: :miles), postcode: @location.postcode) %>
       <% else %>
       <span class="govuk-body-l"><%= @branches.count %></span> <%= t('.results_found') %>
       <% end %>
