--- a/app/views/management_consultancy/journey/choose_services.html.erb
+++ b/app/views/management_consultancy/journey/choose_services.html.erb
@@ -2,7 +2,7 @@
 
 <%= render partial: 'journey/error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
-  <%= hidden_field_tag :lot, params[:lot] %>
+  <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
   <%= govuk_form_group_with_optional_error(@journey, :services) do %>
     <%= govuk_fieldset_with_optional_error(@journey, :services) do %>
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
