--- a/app/views/facilities_management/journey/value_band.html.erb
+++ b/app/views/facilities_management/journey/value_band.html.erb
@@ -2,6 +2,7 @@
 
 <%= render partial: 'journey/error_summary', locals: { errors: @journey.errors } %>
 <%= form_tag @form_path, method: :get do %>
+  <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
   <%= govuk_form_group_with_optional_error(@journey, :value_band) do %>
     <%= govuk_fieldset_with_optional_error(@journey, :value_band) do %>
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
