--- a/app/views/temp_to_perm_calculator/journey/contract_start.html.erb
+++ b/app/views/temp_to_perm_calculator/journey/contract_start.html.erb
@@ -4,6 +4,7 @@
   <div class="govuk-grid-column-two-thirds">
     <%= render partial: 'journey/error_summary', locals: { errors: @journey.errors } %>
     <%= form_tag @form_path, method: :get do %>
+      <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
       <%= govuk_form_group_with_optional_error(@journey, :contract_start) do %>
         <%= govuk_fieldset_with_optional_error(@journey, :contract_start) do %>
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
