--- a/app/views/home/gateway.html.erb
+++ b/app/views/home/gateway.html.erb
@@ -6,8 +6,12 @@
 
       <p><%= t('.cmp_support_email_html', link: govuk_email_link(Marketplace.support_email_address, t('.cmp_support_aria_label'))) %></p>
 
-      <%= link_to 'Sign in with beta credentials', cognito_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
-
+      <p>
+        <%= link_to 'Sign in with beta credentials', cognito_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+        <% if DFE_SIGNIN_ENABLED %>
+          <%= link_to 'Sign in with DfE Sign-in', dfe_sign_in_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+        <% end %>
+      </p>
     </div>
   </div>
 </div>
