(feature) styling the distance switcher

--- a/app/assets/stylesheets/components/_all.scss
+++ b/app/assets/stylesheets/components/_all.scss
@@ -31,6 +31,7 @@
 @import "neutral-vendor-record/neutral-vendor-record";
 @import "phase-banner/phase-banner";
 @import "sidebar/sidebar";
+@import "st-supplier-page/st-supplier-page";
 @import "supplier-record/supplier-record";
 @import "table/table";
 @import "tag/tag";
