--- a/app/views/facilities_management/suppliers/index.html.erb
+++ b/app/views/facilities_management/suppliers/index.html.erb
@@ -2,7 +2,7 @@
   <div class="govuk-grid-column-full">
     <h1 class="govuk-heading-xl cmp-page-heading">Lot <%= @lot.number %> suppliers</h1>
     <p class="govuk-body"><%= contract_value_range_text(@lot.number) %></p>
-    <p class="govuk-body"><%= pluralize(@suppliers.count, 'supplier') %></p>
+    <p class="govuk-body"><%= number_to_human(@suppliers.count, units: :suppliers) %></p>
     <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
     <%= render partial: 'supplier', collection: @suppliers, locals: { lot_number: @lot.number } %>
     <% if @lot.direct_award_possible? %>
