Localise some odd un-localised strings

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,7 +108,7 @@
         <div class="govuk-grid-column-two-thirds">
           <div class="govuk-footer__meta">
             <div class="govuk-footer__meta-item">
-              © Crown copyright
+              <%= t(".crown_copyright") %>
             </div>
           </div>
         </div>
