Use "Sign in" instead of "Log in"
As per https://www.gov.uk/guidance/style-guide/a-to-z-of-gov-uk-style#sign-in-or-log-in.

--- a/app/views/home/gateway.html.erb
+++ b/app/views/home/gateway.html.erb
@@ -6,7 +6,7 @@
 
       <p><%= t('.cmp_support_email_html', link: govuk_email_link(Marketplace.support_email_address, t('.cmp_support_aria_label'))) %></p>
 
-      <%= link_to 'Log in with beta credentials', login_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
+      <%= link_to 'Sign in with beta credentials', login_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8' %>
 
     </div>
   </div>
