--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
             <ul id="navigation" class="govuk-header__navigation " aria-label="Top Level Navigation">
               <li class="govuk-header__navigation-item">
                 <% if logged_in? %>
-                  <%= button_to "Sign out", logout_path, class: 'ccs-header__signout' %>
+                  <%= button_to "Sign out", sign_out_path, class: 'ccs-header__signout' %>
                 <% end %>
               </li>
             </ul>
