(fix) Change service name for Supply Teachers

--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Find supply teachers and non-teaching staff</h1>
+      <h1 class="govuk-heading-xl">Find supply teachers and agency workers</h1>
 
       <p>Use this service to:</p>
 
