Add links to service start pages
So that users can navigate back to the start of a service from within it
(e.g. back to the start of supply-teachers from the results page).

Note that the link isn't yet styled.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
           </a>
         </div>
         <div class="govuk-header__content">
+          <%= link_to_service_start_page %>
           <nav>
             <ul id="navigation" class="govuk-header__navigation " aria-label="Top Level Navigation">
               <li class="govuk-header__navigation-item">
