Add a link to the header so that users can go back to the start page of the service

--- a/app/assets/stylesheets/components/header/_header.scss
+++ b/app/assets/stylesheets/components/header/_header.scss
@@ -21,8 +21,21 @@ $ccs_header_fg: govuk-colour("white");
   height: 90px;
 }
 
+.govuk-header__content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.govuk-header__link--service-name {
+  font-weight: $govuk-font-weight-semi-bold;
+}
+
 .govuk-header__navigation  {
   text-align: right;
+}
+
+.govuk-header__navigation-item {
+  padding: 0;
 }
 
 .ccs-header__signout {
