--- a/app/views/facilities_management/_link_to_start_page.html.erb
+++ b/app/views/facilities_management/_link_to_start_page.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Facilities management', facilities_management_path %>
+<%= link_to t('home.index.facilities_management_link'), facilities_management_path, { class: 'govuk-header__link govuk-header__link--service-name', 'aria-label' => t('layouts.header.go_start_page_aria_label', service_name:t('home.index.facilities_management_link')) } %>
