--- a/app/views/management_consultancy/_link_to_start_page.html.erb
+++ b/app/views/management_consultancy/_link_to_start_page.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Management consultancy', management_consultancy_path %>
+<%= link_to t('home.index.management_consultancy_link'), management_consultancy_path, { class: 'govuk-header__link govuk-header__link--service-name', 'aria-label' => t('layouts.header.go_start_page_aria_label', service_name:t('home.index.management_consultancy_link')) } %>
