--- a/app/views/temp_to_perm_calculator/_link_to_start_page.html.erb
+++ b/app/views/temp_to_perm_calculator/_link_to_start_page.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Temp-to-perm calculator', temp_to_perm_calculator_path %>
+<%= link_to t('home.index.temp_to_perm_calculator_link'), temp_to_perm_calculator_path, { class: 'govuk-header__link govuk-header__link--service-name', 'aria-label' => t('layouts.header.go_start_page_aria_label', service_name:t('home.index.temp_to_perm_calculator_link')) } %>
