Change hint labels
Changed labels of the hints in the managed_service_provider.html.erb

--- a/app/views/supply_teachers/journey/managed_service_provider.html.erb
+++ b/app/views/supply_teachers/journey/managed_service_provider.html.erb
@@ -21,14 +21,14 @@
             <%= radio_button_tag :managed_service_provider, :master_vendor, checked?(params[:managed_service_provider], 'master_vendor'), class: 'govuk-radios__input' %>
             <%= label_tag :managed_service_provider_master_vendor, t('.answer_master_vendor'), class: 'govuk-label govuk-radios__label' %>
             <span class="govuk-hint govuk-radios__hint">
-              <%= t('.option1_hint') %>
+              <%= t('.master_vendor_hint') %>
             </span>
           </div>
           <div class="govuk-radios__item">
             <%= radio_button_tag :managed_service_provider, :neutral_vendor, checked?(params[:managed_service_provider], 'neutral_vendor'), class: 'govuk-radios__input' %>
             <%= label_tag :managed_service_provider_neutral_vendor, t('.answer_neutral_vendor'), class: 'govuk-label govuk-radios__label' %>
             <span class="govuk-hint govuk-radios__hint">
-              <%= t('.option2_hint') %>
+              <%= t('.neutral_vendor_hint') %>
             </span>
           </div>
         </div>
