(fix) adds aria-label to external link
- also updates the service name to Teaching Vacancies

--- a/app/views/supply_teachers/home/index.html.erb
+++ b/app/views/supply_teachers/home/index.html.erb
@@ -32,7 +32,7 @@
 
       <p class="govuk-body">You can’t use this service if you’re an independent school, unless you have charitable status.</p>
 
-      <p class="govuk-body">To find permanent teaching staff, use the <a href="https://teaching-jobs.service.gov.uk/">Teaching Jobs</a> service.</p>
+      <p class="govuk-body">To find permanent teaching staff, use the <a aria-label="Visit the Teaching Vacancies service website" href="https://teaching-jobs.service.gov.uk/">Teaching Jobs</a> service.</p>
 
       <h2 class="govuk-heading-m cmp-start-page__sub-heading">Accreditation of suppliers</h2>
 
