Fix copy & paste error in TTPC hire_date template

--- a/app/views/temp_to_perm_calculator/journey/hire_date.html.erb
+++ b/app/views/temp_to_perm_calculator/journey/hire_date.html.erb
@@ -13,10 +13,10 @@
             </h1>
           </legend>
           <%= display_error(@journey, :hire_date) %>
-          <span id="contract-start-hint" class="govuk-hint">
+          <span id="hire-date-hint" class="govuk-hint">
             For example, 31 3 1980
           </span>
-          <div class="govuk-date-input" id="contract-start">
+          <div class="govuk-date-input" id="hire-date">
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
                 <label class="govuk-label govuk-date-input__label" for="hire_date_day">
