--- a/app/views/temp_to_perm_calculator/journey/contract_start.html.erb
+++ b/app/views/temp_to_perm_calculator/journey/contract_start.html.erb
@@ -9,14 +9,14 @@
         <%= govuk_fieldset_with_optional_error(@journey, :contract_start_day, :contract_start_month, :contract_start_year) do %>
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
-              <%= t('.question') %>
+              <%= t('.contract_start_question') %>
             </h1>
           </legend>
           <%= display_error(@journey, :contract_start_day) %>
           <%= display_error(@journey, :contract_start_month) %>
           <%= display_error(@journey, :contract_start_year) %>
           <span id="contract-start-hint" class="govuk-hint">
-            <%= t('.question_hint') %>
+            <%= t('.contract_start_question_hint') %>
           </span>
           <div class="govuk-date-input" id="contract-start">
             <div class="govuk-date-input__item">
@@ -46,6 +46,49 @@
           </div>
         <% end %>
       <% end %>
+
+      <%= govuk_form_group_with_optional_error(@journey, :hire_date_day, :hire_date_month, :hire_date_year) do %>
+        <%= govuk_fieldset_with_optional_error(@journey, :hire_date_day, :hire_date_month, :hire_date_year) do %>
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+            <h1 class="govuk-fieldset__heading">
+              <%= t('.hire_date_question') %>
+            </h1>
+          </legend>
+          <%= display_error(@journey, :hire_date_day) %>
+          <%= display_error(@journey, :hire_date_month) %>
+          <%= display_error(@journey, :hire_date_year) %>
+          <span id="hire-date-hint" class="govuk-hint">
+            <%= t('.hire_date_question_hint') %>
+          </span>
+          <div class="govuk-date-input" id="hire-date">
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="hire_date_day">
+                  Day
+                </label>
+                <%= number_field_tag :hire_date_day, @journey.current_step.hire_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="hire_date_month">
+                  Month
+                </label>
+                <%= number_field_tag :hire_date_month, @journey.current_step.hire_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
+              </div>
+            </div>
+            <div class="govuk-date-input__item">
+              <div class="govuk-form-group">
+                <label class="govuk-label govuk-date-input__label" for="hire_date_year">
+                  Year
+                </label>
+                <%= number_field_tag :hire_date_year, @journey.current_step.hire_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :hire_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      <% end %>
+
       <%= submit_tag t('common.submit'), class: "govuk-button" %>
     <% end %>
   </div>
